fix:overflow

--- a/example/example.less
+++ b/example/example.less
@@ -5,9 +5,6 @@ body,html{
     margin:0;
     padding: 0;
 }
-body{
-    overflow:hidden;
-}
 h2.example-title{
     padding: 40px;
     font-weight: 500
